Technically working simulation, fitness values for floors bug out at larger station numbers, needs to be fixed